crates/core/tests/ui/typed_macro/fail/verify_invalid_config.stderr
error: compile-time SQL verification configuration error: BABAR_DATABASE_URL does not contain a valid PostgreSQL connection string: invalid connection string
  --> tests/ui/typed_macro/fail/verify_invalid_config.rs:10:9
   |
10 |         SELECT verify_live_users.id, verify_live_users.name FROM public.verify_live_users WHERE verify_live_users.id = $id
   |         ^^^^^^
